--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
-<!-- index.html en la raíz del repo -->
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Prototipos STS</title>
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <base href="/sts_protoz/">
+
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="A new Flutter project.">
+
+  <!-- iOS meta tags & icons -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="sts_hub">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
+  <title>sts_hub</title>
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <h1>Prototipos activos</h1>
-  <ul>
-    <li><a href="sts_em_oficios/">Formulario de oficios</a></li>
-    <!-- Puedes ir agregando más -->
-  </ul>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
